--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
     <div class="vignette"></div>
 
-    <!-- Floating hearts (more of them, varied) -->
+    <!-- Floating hearts -->
     <div class="heart" style="left:8%; animation-duration:14s; animation-delay:0s; font-size:2.8rem;">❤️</div>
     <div class="heart" style="left:18%; animation-duration:17s; animation-delay:2s; font-size:1.9rem;">💗</div>
     <div class="heart" style="left:28%; animation-duration:19s; animation-delay:5s;">💞</div>
@@ -163,15 +163,18 @@
             "Would you be my valentine?"
         ];
 
+        // Your own images — assuming they are named P1.jpg through P8.jpg
+        // Change extension to .png / .jpeg etc. if needed
+        // If images are in a subfolder e.g. "photos/", change to "photos/P1.jpg"
         const images = [
-            "https://thumbs.dreamstime.com/b/romantic-couple-dances-surrounded-floating-hearts-romantic-couple-dances-surrounded-floating-hearts-354409673.jpg",
-            "https://thumbs.dreamstime.com/b/romantic-silhouette-couple-holding-hands-surrounded-floating-hearts-ideal-valentine-s-day-cards-event-invitations-349671158.jpg",
-            "https://thumbs.dreamstime.com/b/valentine-romantic-atmosphere-heart-shaped-moon-silhouette-couple-love-holding-hands-47317094.jpg",
-            "https://thumbs.dreamstime.com/b/silhouette-loving-couple-embracing-sunset-surrounded-floating-hearts-snowy-sky-perfect-valentine-s-day-352846872.jpg",
-            "https://thumbs.dreamstime.com/b/red-rose-petals-scattered-soft-pink-background-romantic-celebration-elegant-arrangement-fresh-falling-surface-ideal-429497441.jpg",
-            "https://thumbs.dreamstime.com/b/soft-pink-rose-petals-sparkling-lavender-glitter-background-romantic-valentine-s-day-design-dreamy-high-key-featuring-420591246.jpg",
-            "https://thumbs.dreamstime.com/b/romantic-valentine-day-roses-love-letter-vibrant-red-elegant-envelope-scattered-rose-petals-dark-wooden-table-302188061.jpg",
-            "https://pixnio.com/free-images/2026/01/20/2026-01-20-05-51-54-1344x896.jpeg"
+            "P1.jpg",
+            "P2.jpg",
+            "P3.jpg",
+            "P4.jpg",
+            "P5.jpg",
+            "P6.jpg",
+            "P7.jpg",
+            "P8.jpg"
         ];
 
         let msgIndex = 0;
