Update image paths to use relative folder structure

--- a/index.html
+++ b/index.html
@@ -163,18 +163,16 @@
             "Would you be my valentine?"
         ];
 
-        // Your own images — assuming they are named P1.jpg through P8.jpg
-        // Change extension to .png / .jpeg etc. if needed
-        // If images are in a subfolder e.g. "photos/", change to "photos/P1.jpg"
+        // Images are inside the "photos" folder → use relative path "photos/P1.jpg" etc.
         const images = [
-            "P1.jpg",
-            "P2.jpg",
-            "P3.jpg",
-            "P4.jpg",
-            "P5.jpg",
-            "P6.jpg",
-            "P7.jpg",
-            "P8.jpg"
+            "photos/P1.jpg",
+            "photos/P2.jpg",
+            "photos/P3.jpg",
+            "photos/P4.jpg",
+            "photos/P5.jpg",
+            "photos/P6.jpg",
+            "photos/P7.jpg",
+            "photos/P8.jpg"
         ];
 
         let msgIndex = 0;
