--- a/index.html
+++ b/index.html
@@ -163,16 +163,16 @@
             "Would you be my valentine?"
         ];
 
-        // Images are inside the "photos" folder → use relative path "photos/P1.jpg" etc.
+        // Updated to .png extension – photos folder
         const images = [
-            "photos/P1.jpg",
-            "photos/P2.jpg",
-            "photos/P3.jpg",
-            "photos/P4.jpg",
-            "photos/P5.jpg",
-            "photos/P6.jpg",
-            "photos/P7.jpg",
-            "photos/P8.jpg"
+            "photos/P1.png",
+            "photos/P2.png",
+            "photos/P3.png",
+            "photos/P4.png",
+            "photos/P5.png",
+            "photos/P6.png",
+            "photos/P7.png",
+            "photos/P8.png"
         ];
 
         let msgIndex = 0;
