--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
 
         // Updated to .png extension – photos folder
         const images = [
-            "photos/P1.png",
-            "photos/P2.png",
-            "photos/P3.png",
-            "photos/P4.png",
-            "photos/P5.png",
-            "photos/P6.png",
-            "photos/P7.png",
-            "photos/P8.png"
+            "/photos/P1.png",
+            "/photos/P2.png",
+            "/photos/P3.png",
+            "/photos/P4.png",
+            "/photos/P5.png",
+            "/photos/P6.png",
+            "/photos/P7.png",
+            "/photos/P8.png"
         ];
 
         let msgIndex = 0;
