--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
 
         // Updated to .png extension – photos folder
         const images = [
-            "/photos/P1.png",
-            "/photos/P2.png",
-            "/photos/P3.png",
-            "/photos/P4.png",
+            "P1.png",
+            "P2.png",
+            "P3.png",
+            "P4.png",
             "/photos/P5.png",
             "/photos/P6.png",
             "/photos/P7.png",
