--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
             "P2.png",
             "P3.png",
             "P4.png",
-            "/photos/P5.png",
-            "/photos/P6.png",
-            "/photos/P7.png",
-            "/photos/P8.png"
+            "5.png",
+            "P6.png",
+            "P7.png",
+            "P8.png"
         ];
 
         let msgIndex = 0;
