--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
 
         // Updated to .png extension – photos folder
         const images = [
-            "P1.png",
-            "P2.png",
-            "P3.png",
+            "/P1.png",
+            "/P2.png",
+            "/P3.png",
             "P4.png",
             "5.png",
             "P6.png",
