--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
 
         // Updated to .png extension – photos folder
         const images = [
-            "/P1.png",
-            "/P2.png",
-            "/P3.png",
-            "P4.png",
-            "5.png",
-            "P6.png",
-            "P7.png",
-            "P8.png"
+            "/P1.JPG",
+            "/P2.heic",
+            "/P3.JPG",
+            "P4.JPEG",
+            "P5.heic",
+            "P6.jpg",
+            "P7.jpg",
+            "P8.JPG"
         ];
 
         let msgIndex = 0;
