Change image extensions from .heic to .jpg

--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
         // Updated to .png extension – photos folder
         const images = [
             "/P1.JPG",
-            "/P2.heic",
+            "/P2.jpg",
             "/P3.JPG",
             "P4.JPEG",
-            "P5.heic",
+            "P5.jpg",
             "P6.jpg",
             "P7.jpg",
             "P8.JPG"
